--- a/about.html
+++ b/about.html
@@ -105,8 +105,8 @@
         <div class="footer-item">
           <h3>Email Newsletter</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-          <form>
-            <input type="email" />
+          <form name="contact-form" action="post" data-netlify="true">
+            <input name="email" type="email" placeholder="Enter Email" />
             <input type="submit" value="Subscribe" class="btn btn-primary" />
           </form>
         </div>
